--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div class="row">
       <div class="column" style="margin-top: 10%">
         <!-- Logo -->
-        <img src="images/logo.png" class="avatar" alt="Logo Systip">
+        <img src="images/logo.jpeg" class="avatar" alt="Logo Systip">
 
         <!-- Title -->
         <h1 role="heading">Systip</h1>
