--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <link rel="stylesheet" href="css/skeleton-auto.css">
   <link rel="stylesheet" href="css/brands.css">
 
-  <link rel="icon" type="image/png" href="images/logo.png">
+  <link rel="icon" type="image/png" href="images/logo.jpeg">
 </head>
 
 <body>
